apps/supapanya-vod/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supapanya-vod
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: supapanya-vod
  template:
    metadata:
      labels:
        app: supapanya-vod
    spec:
      containers:
        - image: nginx:alpine
          imagePullPolicy: IfNotPresent
          name: nginx-vod
          resources: {}
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/
              name: supapanya-vod-config
            - mountPath: /usr/share/nginx/html/
              name: supapanya-vod-store
      volumes:
        - name: supapanya-vod-config
          persistentVolumeClaim:
            claimName: supapanya-vod-config
        - name: supapanya-vod-store
          persistentVolumeClaim:
            claimName: supapanya-vod-store
      restartPolicy: Always
