apps/supapanya-vod/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: supapanya-vod
spec:
  selector:
    app: supapanya-vod
  ports:
    - port: 8080
      targetPort: 8080
      name: http
      protocol: TCP
  type: ClusterIP
